<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.anna.learningenglish.ExerciseActivity">

    <com.anna.learningenglish.components.ProgressView
        android:id="@+id/progressTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="end"
        tools:text="6/20" />

    <TextView
        android:id="@+id/exampleLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/exampleTextView"
        android:text="@string/example"/>

    <TextView
        android:id="@+id/exampleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        tools:text="This is example" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <com.anna.learningenglish.components.AnswerInputLayout
        android:id="@+id/firstFormEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_form"
            android:inputType="text" />

    </com.anna.learningenglish.components.AnswerInputLayout>


    <com.anna.learningenglish.components.AnswerInputLayout
        android:id="@+id/secondFormEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_form"
            android:inputType="text" />

    </com.anna.learningenglish.components.AnswerInputLayout>

    <com.anna.learningenglish.components.AnswerInputLayout
        android:id="@+id/thirdFormEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/third_form"
            android:inputType="text" />

    </com.anna.learningenglish.components.AnswerInputLayout>

    <Button
        android:id="@+id/checkAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/check" />

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/next" />
</LinearLayout>
